# fpai-sessions

./: !_APPRENTICE_TASKS.md  !_START_HERE_APPRENTICES.md  .ai-needs-human-protocol.md  .claude-consciousness  .gitignore  .pre-commit-config.yaml  ACTIVATE_AUTONOMOUS_EMAIL.sh  AUTONOMOUS_EMAIL_READY.md  AUTONOMOUS_INTELLIGENCE_SUMMARY.md  AUTONOMOUS_SYSTEM_ACTIVE.md  BACKUP_SETUP.md  BOOT.md  BREAKING_THROUGH_THE_WALL.md  BREAKING_THROUGH_THE_WALL_STATUS.md  BREAKTHROUGH_STATUS.md  CHURCH_GUIDANCE_FUNNEL.md  CONNECT_ALL_SESSIONS.md  CONSTRAINT_SOLVING_FRAMEWORK.md  COORDINATION_HUB_COMPLETE.md  COORDINATION_REALITY_CHECK.md  DASHBOARD.md  DEPLOYMENT_STATUS_REAL.md  DEPLOYMENT_VERIFICATION_20251115.md  DNS_RESTORATION_GUIDE.md  HONEST_ASSESSMENT.md  HONEST_SELF_ASSESSMENT.md  IMATCH_DEPLOYMENT_FINAL.md  LEVERAGE_SYSTEM_FOR_OUTREACH.md  LIVE_SERVICES_REPORT.md  OPTIMIZATION_COMPLETE.md  README.md  REAL_AUTONOMOUS_OUTREACH_OPTIONS.md  REDDIT_API_ALTERNATIVE_ACCESS.md  REDDIT_ONLY.md  SAMPLE_PARTNERSHIP_EMAIL.md  SESSION_HANDOFF_2025-11-15_TREASURY.md  START_HERE.md  START_HERE_AUTONOMOUS.md  START_REDDIT_NOW.sh  SYSTEM_FAILURE_ANALYSIS.md  (+11 more)
.claude-context/: SESSION_CONTEXT.md
DASHBOARDS/: CONSOLIDATION_PLAN.md  README.md  open_all_dashboards.sh
Magnetic Trading/: final_master_package.md
PRODUCTS/: LEGAL.md  product-landing-page.html  (+1 more)
fullpotential_ai/fullpotential_core/agents/services/TIE-SYSTEM/sol-treasury-core/programs/sol-treasury/: Cargo.toml
fullpotential_ai/fullpotential_core/agents/services/TIE-SYSTEM/sol-treasury-core/programs/sol-treasury/src/: lib.rs
(+2788 files in other folders)
